fix: z-index to 1 for famous-canvas

--- a/src/famous.css
+++ b/src/famous.css
@@ -79,7 +79,7 @@ body {
 canvas.famous-webgl {
     pointer-events: none;
     position: absolute;
-    z-index: 9999;
+    z-index: 1;
     top: 0px;
     left: 0px;
 }
